app/assets/stylesheets/views/homepage.scss
@import '_shims.scss';

.root-index {
  section#content {
    margin: 0 auto;
  }

  .main-campaign,
  .minor-campaigns {
    clear:both;
  }

  div#homepage {
    background-color:#fff;
    padding: 0 2em;
    min-height:26em;
    overflow: visible;

    @include media(mobile) {
      overflow: auto;
      padding: 0 1em;
    }

    header hgroup {
      padding: 0;
      margin-right: 0;
    }

    .homepage-categories {
      padding-top: 0;
      float: left;
      width: 69%;
      margin-right: 0;
      margin-bottom: 1em;

      @include media(mobile) {
        float: none;
        width: 100%;
      }

      h2 {
        @include core-16;

        @include media(mobile) {
          @include core-19;
        }
      }
    }

    .categories-list {
      list-style: none;
      margin: 0;
      padding: 0;

      @include media(mobile) {
        border-top:1px solid $border-colour;
        margin-bottom: 1em;
      }

      li {
        @include core-19;
        @include inline-block;
        border-top:1px solid $border-colour;
        width: 45.5%;
        margin-left: 4.2%;
        vertical-align: top;

        @include ie(8) {
          margin-left: 4.15%;
        }

        @include media(desktop) {

          &:nth-child(2) {
            border-top: none;
          }

          @include ie-lte(8) {
            &.nth-child {
              border-top: none;
            }
          }
        }

        @include media(mobile) {
          display: block;
          width: 100%;
          margin-left: 0;

          &:nth-child(even) {
            float: none;
          }
        }
        p{
          @include core-16;
          padding:0 0 0.85em 0;
          margin:0;
        }

        &:first-child {
          border:none;
        }
      }
    }
  }

  header.intro {
    padding-top: 0;

    .strap {
      margin-right: 0;
      padding: 0;

      h1 {
        @include core-48;
        padding-top: 0;
        padding-bottom:0.25em;
      }
      p {
        @include core-19;
        margin-top: 0;
      }
    }

    .replaces {
      margin-bottom: 0.5em;
    }

    p {
      @include core-16;
    }

    ul{
      list-style-type:none;
      padding:0;
      margin:0 0 2em 0;
    }
    ul li{
      display:inline;
      padding-right:1em;
    }
  }

  .homepage-section {
    min-height:0;
    border-bottom:none;
    margin:0;
    padding-top:1em;
    width:31%;
    float:left;
    margin-top: 1em;

    h1{
      padding: 0 0 5px 0;
    }

    p {
      @include core-16;
    }

    @include media(mobile) {
      float: none;
      width: 100%;
    }

    &:last-child {
      margin-right: 0;
    }
  }

  .minor-campaigns .homepage-section {
    margin-right: 3.5%;

    @include media(mobile) {
      margin-right: 0;
    }
  }

  .minor-campaigns article{
    margin-top:1em;
    border-bottom:none;
    border-top: 4px solid $turquoise;

    &.most-popular{
      ul{
        list-style: none;
        list-style-image: none;
        padding-left: 0;
        li{
          @include core-16;
          margin-left: 0;
          padding-left: 0;
          padding-bottom:0.5em;

          
        }
      }
    }

    &.inside-gov{
      background-color: $black;
      border:none;
      margin-right: 0;
      
      .inner {
        margin-top: 5px;
        padding: 0 1em 1em 1em;
      }

      p{
        @include core-16;
        color:#fff;
      }

      a{
        color:#fff;

        &:hover {
          text-decoration: none;
        }
      }
      
      header{
        background-image: image-url("homepage/homepage-cabinet.jpg");
        background-position: bottom left;
        background-repeat: no-repeat;
        margin: 0 -1em 1em -1em;
        padding: 0 1em;
        padding-bottom:138px;
        
        h1, p{
          @include core-19;
          color:#fff;
          padding: 0 0 10px 0;
          margin:0;
        }

        h1{
          @include bold-24;
        }
      }
    }

    &.mini-promo{

      img {
        margin: 0.75em 0 0 0;
        width: 100%;
      }

      .highlighted-event {
        margin: 0;
        padding: 1em 2em 0.2em 2em;

        a{
          text-decoration: none;
          color:#fff;

          &:hover {
            text-decoration: underline;
          }

        }
      }
    }
  }

  .main-campaign{
    margin: 0;

    @include media(mobile) {
      margin:0 -1em;
    }

    a{
      @include core-24;
      font-weight:bold;
      color: $black;
      text-decoration:none;
      display:block;
      text-align:left;
      padding-left:1em;
      padding-top:1em;
      overflow: hidden;
      height:300px;
      background-image: image-url('homepage/ig-960px.jpg');
      background-position: top left;
      background-repeat: no-repeat;
      @media(max-width: 935px) {
        height:450px;
        background-image: image-url('homepage/ig-935px.jpg');
        background-position: bottom right;
        text-align:right;
        padding-right:1em;
      }

      @media(max-width: 500px) {
        height:252px;
        background-image: image-url('homepage/ig-500px.jpg');
        background-position: bottom right;
        text-align:right;
        padding-right:1em;
      }
    }
    a:hover{
      color:$black;
    }
  }
}

